--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "remark . --output"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -14,6 +15,25 @@
   },
   "devDependencies": {
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "remark-cli": "^10.0.1",
+    "remark-preset-lint-consistent": "^5.1.1",
+    "remark-preset-lint-recommended": "^6.1.2",
+    "remark-toc": "^8.0.1"
+  },
+  "remarkConfig": {
+    "settings": {
+      "bullet": "*"
+    },
+    "plugins": [
+      "remark-preset-lint-consistent",
+      "remark-preset-lint-recommended",
+      [
+        "remark-toc",
+        {
+          "heading": "contents"
+        }
+      ]
+    ]
   }
 }
