--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "format": "remark . --output"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
     "remark-cli": "^10.0.1",
     "remark-preset-lint-consistent": "^5.1.1",
     "remark-preset-lint-recommended": "^6.1.2",
-    "remark-toc": "^8.0.1"
+    "remark-toc": "^8.0.1",
+    "tailwindcss": "^3.0.7"
   },
   "remarkConfig": {
     "settings": {
