--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^1.0.5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
