--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
