--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
+    "fs": "^0.0.1-security",
     "html-react-parser": "^1.4.4",
     "next": "12.0.7",
     "react": "17.0.2",
