--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
     "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "html-react-parser": "^1.4.4",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "remark-html": "^15.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
